--- a/src/Main/Stylesheets/MasterStylesheet.css
+++ b/src/Main/Stylesheets/MasterStylesheet.css
@@ -18,3 +18,22 @@
     -fx-background-color: #171717;
 }
 
+.txt-field {
+    -fx-background-color: #3B4148;
+    -fx-background-radius: 0px;
+    -fx-prompt-text-fill: #ADADAD;
+    -fx-text-fill: #FFFFFF;
+}
+
+.txt-field:focused {
+    -fx-background-color: #363B41;
+    -fx-background-radius: 0px;
+    -fx-prompt-text-fill: #ADADAD;
+    -fx-text-fill: #FFFFFF;
+}
+
+.login-btn {
+    -fx-background-color: green;
+
+    -fx-text-fill: #FFFFFF;
+}
