--- a/src/Main/Views/Login.fxml
+++ b/src/Main/Views/Login.fxml
@@ -35,7 +35,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Pane layoutX="329.0" layoutY="37.0" prefHeight="297.0" prefWidth="542.0" />
+            <Pane fx:id="logoPane" layoutX="329.0" layoutY="37.0" prefHeight="297.0" prefWidth="542.0" />
          </children>
       </Pane>
    </children>
