--- a/src/Main/Views/Login.fxml
+++ b/src/Main/Views/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -25,17 +26,27 @@
       </HBox>
       <Pane fx:id="content" layoutY="29.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="1200.0">
          <children>
-            <TextField fx:id="summNameInput" layoutX="450.0" layoutY="385.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="300.0" promptText="Summoner Name" styleClass="txt-field" stylesheets="@../Stylesheets/MasterStylesheet.css">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </TextField>
-            <Button fx:id="loginButton" layoutX="450.0" layoutY="451.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" styleClass="login-btn" stylesheets="@../Stylesheets/MasterStylesheet.css" text="Login">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
+            <ImageView fx:id="bgImageLogin" fitHeight="770.0" fitWidth="1200.0" pickOnBounds="true" preserveRatio="true" />
             <Pane fx:id="logoPane" layoutX="329.0" layoutY="37.0" prefHeight="297.0" prefWidth="542.0" />
+            <AnchorPane fx:id="loginAnchorPane" layoutX="433.0" layoutY="363.0" prefHeight="193.0" prefWidth="334.0">
+               <children>
+                  <TextField fx:id="summNameInput" layoutX="17.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" promptText="Summoner Name" styleClass="txt-field" stylesheets="@../Stylesheets/MasterStylesheet.css">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="loginButton" layoutX="17.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" styleClass="login-btn" stylesheets="@../Stylesheets/MasterStylesheet.css" text="Login">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="129.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="300.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
       </Pane>
    </children>
