--- a/src/Main/Views/Login.fxml
+++ b/src/Main/Views/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -31,7 +32,7 @@
             <Pane fx:id="logoPane" layoutX="329.0" layoutY="37.0" prefHeight="297.0" prefWidth="542.0" />
             <AnchorPane fx:id="loginAnchorPane" layoutX="433.0" layoutY="363.0" prefHeight="193.0" prefWidth="334.0">
                <children>
-                  <TextField fx:id="summNameInput" layoutX="17.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" promptText="Summoner Name" styleClass="txt-field" stylesheets="@../Stylesheets/MasterStylesheet.css">
+                  <TextField fx:id="summNameInput" layoutX="92.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogin" prefHeight="50.0" prefWidth="225.0" promptText="Summoner Name" styleClass="txt-field" stylesheets="@../Stylesheets/MasterStylesheet.css">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -46,6 +47,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
+                  <ChoiceBox fx:id="regions" layoutX="17.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="70.0" styleClass="region-dropdown" stylesheets="@../Stylesheets/MasterStylesheet.css" />
                </children>
             </AnchorPane>
          </children>
