--- a/src/Main/Views/Login.fxml
+++ b/src/Main/Views/Login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -32,22 +33,34 @@
             <Pane fx:id="logoPane" layoutX="329.0" layoutY="37.0" prefHeight="297.0" prefWidth="542.0" />
             <AnchorPane fx:id="loginAnchorPane" layoutX="433.0" layoutY="363.0" prefHeight="193.0" prefWidth="334.0">
                <children>
-                  <TextField fx:id="summNameInput" layoutX="92.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogin" prefHeight="50.0" prefWidth="225.0" promptText="Summoner Name" styleClass="txt-field" stylesheets="@../Stylesheets/MasterStylesheet.css">
+                  <TextField fx:id="summNameInput" layoutX="92.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogin" prefHeight="50.0" prefWidth="225.0" promptText="Summoner Name" styleClass="txt-field">
                      <font>
                         <Font size="24.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@../Stylesheets/MasterStylesheet.css" />
+                        <URL value="@../Stylesheets/LoginStylesheet.css" />
+                     </stylesheets>
                   </TextField>
-                  <Button fx:id="loginButton" layoutX="17.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" styleClass="login-btn" stylesheets="@../Stylesheets/MasterStylesheet.css" text="Login">
+                  <Button fx:id="loginButton" layoutX="17.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogin" prefHeight="50.0" prefWidth="300.0" styleClass="login-btn" text="Login">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@../Stylesheets/MasterStylesheet.css" />
+                        <URL value="@../Stylesheets/LoginStylesheet.css" />
+                     </stylesheets>
                   </Button>
                   <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="129.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="300.0">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <ChoiceBox fx:id="regions" layoutX="17.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="70.0" styleClass="region-dropdown" stylesheets="@../Stylesheets/MasterStylesheet.css" />
+                  <ChoiceBox fx:id="regions" layoutX="17.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="70.0" styleClass="region-dropdown">
+                     <stylesheets>
+                        <URL value="@../Stylesheets/MasterStylesheet.css" />
+                        <URL value="@../Stylesheets/LoginStylesheet.css" />
+                     </stylesheets></ChoiceBox>
                </children>
             </AnchorPane>
          </children>
