--- a/src/Main/Views/EditAccordion.fxml
+++ b/src/Main/Views/EditAccordion.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="160.0" styleClass="popup" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <panes>
     <TitledPane animated="false" text="untitled 1">
       <content>
@@ -22,4 +23,8 @@
       </content>
     </TitledPane>
   </panes>
+   <stylesheets>
+      <URL value="@../Stylesheets/MasterStylesheet.css" />
+      <URL value="@../Stylesheets/AccordionStylesheet.css" />
+   </stylesheets>
 </Accordion>
