--- a/src/MVC/Views/InGame.fxml
+++ b/src/MVC/Views/InGame.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Main.Controllers.InGameController"
+            fx:controller="MVC.Controllers.InGameController"
             prefHeight="800.0" prefWidth="1200.0">
 
 </AnchorPane>
