--- a/src/MVC/Views/Summoner.fxml
+++ b/src/MVC/Views/Summoner.fxml
@@ -18,6 +18,7 @@
                    <graphic>
                        <FontAwesomeIconView fill="WHITE" glyphName="MINUS" nodeOrientation="LEFT_TO_RIGHT" selectionStart="1" size="21" strokeType="INSIDE" styleClass="minimize-btn" textAlignment="CENTER" textOrigin="CENTER" wrappingWidth="30.0" />
                    </graphic></Label>
+            <Label fx:id="maximize" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#maximizeStage" prefHeight="30.0" prefWidth="30.0" styleClass="minimize-btn" textFill="WHITE" />
                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="1175.0" layoutY="12.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#closeApp" prefHeight="30.0" prefWidth="30.0" styleClass="close-btn" textFill="WHITE">
                    <graphic>
                        <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="21" styleClass="close-btn" textAlignment="CENTER" wrappingWidth="30.0" />
@@ -53,7 +54,7 @@
             </JFXTabPane>
             <Label fx:id="editLayoutToggle" alignment="CENTER" layoutY="40.0" onMouseClicked="#editLayout" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER" textFill="WHITE">
                <graphic>
-                  <FontAwesomeIconView fill="#ddb905" glyphName="COG" size="18" textAlignment="CENTER">
+                  <FontAwesomeIconView fill="#ddb905" glyphName="PENCIL" size="18" textAlignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font>
