Fixed layout bugs and maybe dynamic gridpane? havent tested

--- a/src/MVC/Views/MenuAccordion.fxml
+++ b/src/MVC/Views/MenuAccordion.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TitledPane?>
 
-<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Accordion maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <panes>
     <TitledPane animated="false" styleClass="popup" stylesheets="@../Stylesheets/MasterStylesheet.css" text="Standard">
          <content>
