Grid updates work... need to make widgets draggable and style save menu, need to fix grid only showing one column

--- a/src/MVC/Layouts/layoutconfig.xml
+++ b/src/MVC/Layouts/layoutconfig.xml
@@ -3,7 +3,7 @@
 <files>
     <file>
         <name>default1</name>
-        <mostrecent>true</mostrecent>
+        <mostrecent>false</mostrecent>
     </file>
     <file>
         <name>default2</name>
