--- a/resources/stylesheets/WidgetStylesheet.css
+++ b/resources/stylesheets/WidgetStylesheet.css
@@ -31,3 +31,16 @@
     -fx-border-width: 2px;
     -fx-border-radius: 10;
 }
+
+.item-builds-widget {
+
+}
+
+.item-flow-pane {
+    -fx-padding: 10.0 3.0 5.0 0.0;
+    -fx-hgap: 4;
+    -fx-vgap: 4;
+    -fx-border-width: 1px;
+    -fx-border-color: yellow;
+    -fx-border-radius: 3px;
+}
